css/style.css
/*--------------------------------------
--------------*** GLOBAL STYLE ***------------
----------------------------------------*/

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}


.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

.container {
  margin: 0 auto;
  width: 1170px;
}

a {
  text-decoration: none;
  text-transform: uppercase;
}

/*--------------------------------------
--------------*** MAIN TOP BANNER ***------------
----------------------------------------*/

/*** HEADER ***/
header {
  background-image: url('../img/et_banner.jpg');
  background-repeat: no-repeat;
  background-position: center;
  height: 800px;
}

.logo {
  float: left;
  padding-top: 25px;
}

.head-nav ul {
  float: right;
  width: 685px;
}

.head-nav ul li {
  list-style: none;
  display: inline-block;
  margin: 0 1%;
  padding: 0 12px;
  height: 45px;
}

.head-nav ul li:last-child {
  display: inline-block;
  background-color: #EC143D;
  border-radius: 20px;
  height: 40px;
  width: 98px;
  padding-left: 25px;
}


.head-nav ul li a {
  display: inline-block;
  color: #ffffff;
  padding: 40px 0;
  font-size: 14px;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
}

.head-nav ul li:hover a {
  transition-duration: .3s;
  color: #EC143D;
}

.head-nav ul li:last-child a {
  font-size: 12px;
  padding-top: 13px;
}

/*** MAIN BANNER STYLE ***/
.banner-content {
  padding: 200px 0;
  color: #ffffff;
  font-family: 'Roboto', sans-serif;
  text-align: center;
}

.countdown-units {
  display: inline-block;
}

.countdown-row div {
  margin: 0 18px;
}

.days, .hours, .minutes, .seconds {
  float: left;
}

.day, .hour, .minute, .second {
  font-size: 62px;
  font-weight: 700;
}

.countdown-row .text {
  font-size: 24px;
  font-weight: lighter;
}

.days {
  color: #EC143D;
}

.hours {
  color: #FFBF28;
}

.minutes {
  color: #09ACF2;
}

.seconds {
  color: #8DC150;
}

.banner-title {
  font-family: 'Lato', sans-serif;
  font-size: 66px;
  text-transform: uppercase;
  padding-top: 14px;
  margin-bottom: 20px;
}

.banner-title-info {
  font-size: 32px;
  font-weight: 700;
  letter-spacing: 2px;
  text-transform: uppercase;
  margin-bottom: 40px;
}

.banner-btn a {
  margin: 0 5px;
}

.banner-btn a:first-child {
  display: inline-block;
  background-color: #EC143D;
  height: 45px;
  width: 150px;
  border-radius: 22.5px;
  color: #fff;
  font-size: 12px;
  padding-top: 16px;
}

.banner-btn a:last-child {
  display: inline-block;
  border: 2px solid #fff;
  border-radius: 22.5px;
  height: 45px;
  width: 150px;
  padding-top: 14px;
  color: #fff;
  font-size: 12px;
}

/*--------------------------------------
--------------*** ABOUT SECTION ***------------
----------------------------------------*/
.about-section {
  height: 645px;
  padding: 80px 0;
  font-family: 'Roboto', sans-serif;
  text-align: center;
}

.intro-title {
  color: #1c1c24;
  font-size: 36px;
  margin-bottom: 16px;
}

.intro-services {
  color: #333;
  font-size: 18px;
  font-weight: 400;
  margin-bottom: 65px;
}

.intro-video {
  width: 50%;
  float: left;
}

.featured-right-panel {
  float: left;
  width: 50%;
  text-align: initial;
  padding: 0 20px;
}

.featured-tabs {
  margin-bottom: 30px;
}

.featured-tabs li {
  list-style: none;
  display: inline;
  margin: 0 5px;
}

.featured-tabs li a {
  display: inline-block;
  color: #fff;
  font-size: 14px;
  text-decoration: none;
  text-transform: none;
  background-color: #222;
  height: 40px;
  border-radius: 20px;
  padding-top: 10px;
  width: 124px;
  text-align: center;
}

.featured-tabs li:first-child a {
  width: 192px;
  background-color: #EC143D;
}

.right-panel-text {
  color: #222;
  font-size: 14px;
  line-height: 24px;
}

.right-panel-text p {
  margin-bottom: 10px;
}
.right-panel-text h3 {
  font-size: 20px;
  letter-spacing: .5px;
  margin-bottom: 15px;
  font-weight: 500;
}

 blockquote {
  border-left: 3px solid #ee163a;
  line-height: 24px;
  font-family: 'Lato';
  font-weight: 300;
  font-size: 15px;
  font-style: italic;
  padding: 10px 20px;
  margin: 10px 0;
}

/*--------------------------------------
--------------*** FACTS SECTION ***------------
----------------------------------------*/
.facts-strip {
  height: 295px;
  background-color: #1c1c24;
  background-image: url('../img/parallax1.jpg');
  background-position: center;
  background-attachment: fixed;
  background-size: cover;

}

.facts-strip-icons, .container {
  position: relative;
  z-index: 1;
}

.facts-strip-icons:after {
  background-color: rgba(0, 0, 0, 0.7);
  content: '';
  position: absolute;
  z-index: 0;
  width: 100%;
  height: 100%;
  top: 0;
}

.icon-facts {
  float: right;
  color: #fff;
  font-family: 'Roboto', sans-serif;
  text-align: center;
}

.icon-facts h3 {
  font-size: 16px;
  font-weight: 400;
}

.count {
  font-size: 48px;
  font-weight: 500;
}

.attendees, .speakers, .sessions, .countries {
  float: left;
  width: 25%;
  padding-top: 120px;
  padding-left: 100px;
}

.facts-icon i {
  font-size: 28px;
  height: 70px;
  width: 70px;
  background-color: #EC143D;
  color: #fff;
  border-radius: 100%;
}

.fa.fa-microphone {
  padding-left: 27px;
  padding-top: 22px;
}

.fa.fa-users {
  padding-left: 21px;
  padding-top: 23px;
}

.fa.fa-calendar {
  padding-left: 22px;
  padding-top: 21px;
}

.fa.fa-globe {
  padding-left: 23px;
  padding-top: 21px;
}

/*--------------------------------------
--------------*** EVENT SCHEDULE ***------------
----------------------------------------*/
.event-schedule {
  height: 1321px;
  padding: 80px 0;
}

.event-schedule-content {
  max-width: 960px;
  margin: auto;
}

.schedule-title {
  color: #333;
  font-family: 'Roboto', sans-serif;
  line-height: 36px;
  text-align: center;
}

.schedule-title h2 {
  font-size: 36px;
  margin-bottom: 15px;
}

.schedule-title p {
  font-size: 18px;
  margin-bottom: 60px;
}

.schedule-details {
  font-family: 'Roboto', sans-serif;
}

.event-days {
  margin-bottom: 40px;
  text-align: center;
}

.event-days li {
  display: inline;
}

.event-days li a{
  display: inline-block;
  background-color: #EC143D;
  color: #fff;
  font-size: 16px;
  text-decoration: none;
  text-transform: none;
  height: 48px;
  border-radius: 24px;
  padding-top: 14px;
  width: 124px;
  text-align: center;
}

.event-date {
  color: #ee163a;
  text-align: center;
  margin-bottom: 40px;
}

.schedule-details {
  color: #333;
  display: inline-block;
}

.details-row {
  background-color: #f5f5f5;
  border: 1px solid #ddd;
  border-radius: 5px;
  padding: 25px 40px;
  display: inline-block;
  width: 100%;
}

.details-row-lg {
  border: 1px solid #ddd;
  border-radius: 5px;
  padding: 25px 40px;
  display: inline-block;
  width: 100%;
}

.details-slot-time, .details-slot {
  float: left;
}

.details-slot-time {
  width: 20%;
  font-size: 14px;
  font-weight: 500;
  color: #333;
  line-height: 24px;
}

.details-slot {
  width: 80%;
  padding-left: 50px;
  line-height: 24px;
}

.details-row h3, .details-row-lg h2 {
  font-size: 20px;
  margin: 5px 0;
}

.details-row p, .details-row-lg p {
  font-size: 14px;
  padding: 0 0 10px;
}

.details-row-lg  h4{
  color: #ee163a;
}

/*--------------------------------------
--------------*** SPEAKERS ***------------
----------------------------------------*/

.event-speakers {
  color: #ffffff;
  font-family: 'Roboto', sans-serif;
  height: 1110px;
  background-color: #1c1c1c;
  background-image: url('../img/parallax2.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  padding: 100px 0;
  width: 100%;
}

.speakers-content, .container {
  position: relative;
  z-index: 1;
}

.speakers-content:after {
  background-color: rgba(0, 0, 0, 0.7);
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  z-index: 0;
}

.speakers-title {
  text-align: center;
}

.speakers-title h2 {
  font-size: 36px;
  font-weight: 300px;
  padding-bottom: 15px;
}

.speakers-title p {
  font-size: 18px;
  padding-bottom: 60px;
}

.speakers-profile {
  float: left;
  width: 25%;
  padding-left: 15px;
  padding-right: 15px;
}

.speaker-info {
  background: #fff;
  border-radius: 5px;
}

.speaker-image img {
  max-width: 100%;
  border-radius: 5px;
}

.speaker-name {
  padding: 15px 20px;
}

.speaker-name a {
  color: #ee163a;
  font-size: 18px;
  text-decoration: none;
  text-transform: none;
}

.speaker-name p {
  color: #303030;
  font-size: 16px;
  font-weight: 400;
  margin: 0 0 29px;
}

.speaker-row-gap {
  clear: both;
  height: 40px;
}

/*--------------------------------------
--------------*** SPONSORS / PARTNERS ***------------
----------------------------------------*/
.sponsors-partners {
  height: 1215px;
  color: #1c1c1c;
  font-family: 'Roboto', sans-serif;
  padding: 80px 0;
}

.sponsors-partners-heading {
  text-align: center;
}

.sponsors-partners-heading h2{
  font-size: 36px;
  font-weight: 700;
  line-height: 36px;
  padding-bottom: 15px;
}

.sponsor {
  padding: 0 130px;
}

.sponsor h3,
.sponsor2 h3 {
  text-align: center;
  font-size: 24px;
  font-weight: 700;
}
.sponsor-logo {
  width: 29.333333%;
}

.sponsor-logo2 {
  width: 22%;
}
.sponsor-logo,
.sponsor-logo2 {
  float: left;
  padding: 0 15px;
  border: 1px solid #dedede;
  border-radius: 5px;
  text-align: center;
  min-height: 125px;
  margin: 60px 15px;
}

.sponsor-logo a,
.sponsor-logo2 a {
  display: inline-block;
  justify-content: center;
  align-items: center;
  padding: 0 30px;
  width: 100%;
}

.sponsor-logo img,
.sponsor-logo2 img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
  margin-top: 20px;
}

.sponsor-logo:nth-child(3) img{
  margin-top: 45px;
}

.button-row {
  text-align: center;
  margin-top: 60px;
}
.become-sponsor-red {
  padding: 13px 40px;
  text-transform: uppercase;
  color: #fff;
  background: #ee163a;
  font-size: 14px;
  border: 2px solid transparent;
  border-radius: 25px;
}

/*--------------------------------------
--------------*** EVENT PRICES ***------------
----------------------------------------*/
.event-prices {
  height: 704px;
  background-color: #f5f5f5;
  background-image: url('../img/parallax3.jpg');
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  padding: 100px 15px;
}

.prices-panel {
  background: #fff;
  width: 30.33333%;
  padding: 50px;
  margin: 0 15px;
  border-radius: 5px;
  float: left;
}

.prices-panel ul {
  list-style: none;
}

.prices-panel ul li {
  border-top: 1px dotted #ddd;
  padding: 15px 0;
}

.prices-panel ul li:first-child {
  border-top: 1px solid #fff;
}
/*--------------------------------------
--------------*** FOOTER SECTION ***------------
----------------------------------------*/
.footer-background {
  height: 445px;
  background-image: url('../img/pattern2.png');
  position: relative;
  overflow: hidden;
}

.orange-overlay {
  position: absolute;
  height: 100%;
  width: 125%;
  bottom: 0;
  left: -171px;
}

.footer-content  {
  padding-top: 90px;
  margin: 0 auto;
  font-family: 'Roboto', sans-serif;
}

.footer-logo {
  text-align: center;
}

.footer-logo img {
  width: 281px;
  height: 61px;
}

.footer-social {
  margin: 0 auto;
  padding-top: 40px;
  text-align: center;
}

.footer-social ul li {
  list-style: none;
  display: inline;
  padding: 0 16px;
}

.footer-social ul li a i {
  font-size: 32px;
  color: #fff;
}

.footer-menu {
  margin: 0 auto;
  padding-top: 45px;
  margin-bottom: 45px;
  text-align: center;
  color: #888;
  font-weight: lighter;
}

.footer-menu ul li {
  list-style: none;
  display: inline;
  padding: 0 12px;
}

.footer-menu ul li a {
  color: #999;
  font-size: 11.5px;
  font-weight: 300;
  letter-spacing: .5px;
}

.footer-copyright {
  color: #999;
  font-size: 13px;
  font-weight: 300;
  margin: auto;
  text-align: center;
  letter-spacing: .5px;
}

